crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef enum {
  PamojaLorawanMessageType_JoinRequest = 0,
  PamojaLorawanMessageType_JoinAccept = 1,
  PamojaLorawanMessageType_UnconfirmedUp = 2,
  PamojaLorawanMessageType_ConfirmedUp = 3,
  PamojaLorawanMessageType_UnconfirmedDown = 4,
  PamojaLorawanMessageType_ConfirmedDown = 5,
} PamojaLorawanMessageType;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaLorawanDevice PamojaLorawanDevice;
typedef struct PamojaLorawanJoinAccept PamojaLorawanJoinAccept;
typedef struct PamojaLorawanJoinRequest PamojaLorawanJoinRequest;
typedef struct PamojaLorawanRx PamojaLorawanRx;
typedef struct PamojaLorawanSession PamojaLorawanSession;
typedef struct {
  uintptr_t payload_len;
  uint32_t dev_addr;
  uint16_t fcnt;
  PamojaLorawanMessageType message_type;
  uint8_t fport;
  uint8_t is_data;
  uint8_t has_fport;
  uint8_t confirmed;
  uint8_t adr;
  uint8_t ack;
  uint8_t fpending;
  uint8_t fopts_len;
} PamojaLorawanHeader;
typedef struct {
  uint32_t app_nonce;
  uint32_t net_id;
  uint32_t dev_addr;
  uint8_t dl_settings;
  uint8_t rx_delay;
} PamojaLorawanGrant;
uint16_t pamoja_lorawan_rx_fcnt(const PamojaLorawanRx *rx);
bool pamoja_lorawan_rx_confirmed(const PamojaLorawanRx *rx);
bool pamoja_lorawan_rx_adr(const PamojaLorawanRx *rx);
bool pamoja_lorawan_rx_ack(const PamojaLorawanRx *rx);
bool pamoja_lorawan_rx_fpending(const PamojaLorawanRx *rx);
bool pamoja_lorawan_rx_fport(const PamojaLorawanRx *rx, uint8_t *out_fport);
const uint8_t *pamoja_lorawan_rx_fopts(const PamojaLorawanRx *rx);
uintptr_t pamoja_lorawan_rx_fopts_len(const PamojaLorawanRx *rx);
const uint8_t *pamoja_lorawan_rx_payload(const PamojaLorawanRx *rx);
uintptr_t pamoja_lorawan_rx_payload_len(const PamojaLorawanRx *rx);
void pamoja_lorawan_rx_free(PamojaLorawanRx *rx);
PamojaStatus pamoja_lorawan_device_new(const uint8_t *dev_eui,
                                       uintptr_t dev_eui_len,
                                       const uint8_t *app_eui,
                                       uintptr_t app_eui_len,
                                       const uint8_t *app_key,
                                       uintptr_t app_key_len,
                                       PamojaLorawanDevice **out_device);
PamojaStatus pamoja_lorawan_device_join_request(const PamojaLorawanDevice *device,
                                                uint16_t dev_nonce,
                                                PamojaBuffer **out_frame);
PamojaStatus pamoja_lorawan_device_accept_join(const PamojaLorawanDevice *device,
                                               const uint8_t *bytes,
                                               uintptr_t bytes_len,
                                               uint16_t dev_nonce,
                                               PamojaLorawanJoinAccept **out_accept);
void pamoja_lorawan_device_free(PamojaLorawanDevice *device);
uint32_t pamoja_lorawan_join_accept_dev_addr(const PamojaLorawanJoinAccept *accept);
uint32_t pamoja_lorawan_join_accept_net_id(const PamojaLorawanJoinAccept *accept);
uint8_t pamoja_lorawan_join_accept_dl_settings(const PamojaLorawanJoinAccept *accept);
uint8_t pamoja_lorawan_join_accept_rx_delay(const PamojaLorawanJoinAccept *accept);
PamojaStatus pamoja_lorawan_join_accept_session(const PamojaLorawanJoinAccept *accept,
                                                PamojaLorawanSession **out_session);
void pamoja_lorawan_join_accept_free(PamojaLorawanJoinAccept *accept);
PamojaStatus pamoja_lorawan_header_parse(const uint8_t *bytes,
                                         uintptr_t bytes_len,
                                         PamojaLorawanHeader *out_header);
PamojaStatus pamoja_lorawan_join_request_parse(const uint8_t *bytes,
                                               uintptr_t bytes_len,
                                               const uint8_t *app_key,
                                               uintptr_t app_key_len,
                                               PamojaLorawanJoinRequest **out_request);
bool pamoja_lorawan_join_request_dev_eui(const PamojaLorawanJoinRequest *request,
                                         uint8_t *out_dev_eui);
bool pamoja_lorawan_join_request_app_eui(const PamojaLorawanJoinRequest *request,
                                         uint8_t *out_app_eui);
uint16_t pamoja_lorawan_join_request_dev_nonce(const PamojaLorawanJoinRequest *request);
void pamoja_lorawan_join_request_free(PamojaLorawanJoinRequest *request);
PamojaStatus pamoja_lorawan_grant_accept(PamojaLorawanGrant grant,
                                         const uint8_t *cflist,
                                         uintptr_t cflist_len,
                                         const uint8_t *app_key,
                                         uintptr_t app_key_len,
                                         uint16_t dev_nonce,
                                         PamojaBuffer **out_frame);
PamojaStatus pamoja_lorawan_grant_session(PamojaLorawanGrant grant,
                                          const uint8_t *cflist,
                                          uintptr_t cflist_len,
                                          const uint8_t *app_key,
                                          uintptr_t app_key_len,
                                          uint16_t dev_nonce,
                                          PamojaLorawanSession **out_session);