bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.Radio.cs


    /// <summary>Returns the low 16 bits of the frame counter.</summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_lorawan_rx_fcnt(IntPtr rx);

    /// <summary>Reports whether a decoded frame asks to be acknowledged.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_lorawan_rx_confirmed(IntPtr rx);

    /// <summary>Reports whether a decoded frame takes part in adaptive data rate.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_lorawan_rx_adr(IntPtr rx);

    /// <summary>Reports whether a decoded frame acknowledges the last confirmed one.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_lorawan_rx_ack(IntPtr rx);

    /// <summary>Reports whether the network has more downlink data waiting.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_lorawan_rx_fpending(IntPtr rx);

    /// <summary>Returns the port a decoded frame was sent on.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_lorawan_rx_fport(IntPtr rx, out byte outFport);

    /// <summary>Returns a pointer to the frame options a decoded frame carries.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_lorawan_rx_fopts(IntPtr rx);

    /// <summary>Returns the length of the frame options a decoded frame carries.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_lorawan_rx_fopts_len(IntPtr rx);

    /// <summary>Returns a pointer to the decrypted payload of a decoded frame.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_lorawan_rx_payload(IntPtr rx);

    /// <summary>Returns the length of the decrypted payload of a decoded frame.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_lorawan_rx_payload_len(IntPtr rx);

    /// <summary>Releases a decoded frame handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_lorawan_rx_free(IntPtr rx);

    /// <summary>Creates a device from the root credentials activation uses.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lorawan_device_new(
        ReadOnlySpan<byte> devEui,
        nuint devEuiLen,
        ReadOnlySpan<byte> appEui,
        nuint appEuiLen,
        ReadOnlySpan<byte> appKey,
        nuint appKeyLen,
        out IntPtr outDevice);

    /// <summary>Builds the join request a device broadcasts to activate.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lorawan_device_join_request(
        IntPtr device,
        ushort devNonce,
        out IntPtr outFrame);

    /// <summary>Turns the join accept a network sent into the settings it grants.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lorawan_device_accept_join(
        IntPtr device,
        ReadOnlySpan<byte> bytes,
        nuint bytesLen,
        ushort devNonce,
        out IntPtr outAccept);

    /// <summary>Releases a device handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_lorawan_device_free(IntPtr device);

    /// <summary>Returns the device address a join grants.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_lorawan_join_accept_dev_addr(IntPtr accept);

    /// <summary>Returns the identifier of the network that accepted a join.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_lorawan_join_accept_net_id(IntPtr accept);

    /// <summary>Returns the downlink settings byte a join grants.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_lorawan_join_accept_dl_settings(IntPtr accept);

    /// <summary>Returns the delay before the first receive window, in seconds.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_lorawan_join_accept_rx_delay(IntPtr accept);

    /// <summary>Takes the activated session a join grants.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lorawan_join_accept_session(
        IntPtr accept,
        out IntPtr outSession);

    /// <summary>Releases an accepted join handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_lorawan_join_accept_free(IntPtr accept);

    /// <summary>Reads a frame far enough to route it, without any key.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lorawan_header_parse(
        ReadOnlySpan<byte> bytes,
        nuint bytesLen,
        out PamojaLorawanHeader outHeader);

    /// <summary>Verifies a join-request and reads the identifiers out of it.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lorawan_join_request_parse(
        ReadOnlySpan<byte> bytes,
        nuint bytesLen,
        ReadOnlySpan<byte> appKey,
        nuint appKeyLen,
        out IntPtr outRequest);

    /// <summary>Copies the device identifier out of a verified join-request.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_lorawan_join_request_dev_eui(
        IntPtr request,
        Span<byte> outDevEui);

    /// <summary>Copies the application identifier out of a verified join-request.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_lorawan_join_request_app_eui(
        IntPtr request,
        Span<byte> outAppEui);

    /// <summary>Returns the nonce a verified join-request carried.</summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_lorawan_join_request_dev_nonce(IntPtr request);

    /// <summary>Releases a verified join-request handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_lorawan_join_request_free(IntPtr request);

    /// <summary>Builds the signed join-accept a network sends to admit a device.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lorawan_grant_accept(
        PamojaLorawanGrant grant,
        ReadOnlySpan<byte> cflist,
        nuint cflistLen,
        ReadOnlySpan<byte> appKey,
        nuint appKeyLen,
        ushort devNonce,
        out IntPtr outFrame);

    /// <summary>Derives the session a grant activates.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_lorawan_grant_session(
        PamojaLorawanGrant grant,
        ReadOnlySpan<byte> cflist,
        nuint cflistLen,
        ReadOnlySpan<byte> appKey,
        nuint appKeyLen,
        ushort devNonce,
        out IntPtr outSession);
}
